--- a/contacts.html
+++ b/contacts.html
@@ -137,7 +137,7 @@
         <h1 class="menu__title">
           <a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt="" /></a>
         </h1>
-        <nav class="nav">
+        <nav class="nav nav-short">
           <div class="nav__inner">
             <ul class="nav__list">
               <li class="nav__item">
