--- a/about-us.html
+++ b/about-us.html
@@ -340,6 +340,11 @@
 		</div>
 
 		<div class="header__container container">
+			<div class="header__lang">
+				<button class="header__btn" data-btn="ua">Ua</button>
+				<button class="header__btn" data-btn="en">En</button>
+				<button class="header__btn" data-btn="de">Dn</button>
+			</div>
 			<div class="menu">
 				<button class="burger-btn"><span></span></button>
 				<h1 class="menu__title">
@@ -349,7 +354,7 @@
 					<div class="nav__inner">
 						<ul class="nav__list">
 							<li class="nav__item">
-								<a href="services.html" class="link-hover"> Металообробка </a>
+								<a href="services.html" class="link-hover" data-lang="index_nav-page-1"> Металообробка </a>
 							</li>
 							<li class="nav__item">
 								<a class="link--active">Про нас</a>
