--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
     </div>
 
     <div class="header__container container">
+      <div class="header__lang">
+        <button class="header__btn" data-btn="ua">Ua</button>
+        <button class="header__btn" data-btn="en">En</button>
+        <button class="header__btn" data-btn="de">Dn</button>
+      </div>
       <div class="menu">
         <button class="burger-btn"><span></span></button>
         <h1 class="menu__title">
@@ -126,13 +131,13 @@
           <div class="nav__inner">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="services.html" class="link-hover">Металообробка</a>
+                <a href="services.html" class="link-hover" data-lang="nav_page-1"></a>
               </li>
               <li class="nav__item">
-                <a href="about-us.html" class="link-hover">Про нас</a>
+                <a href="about-us.html" class="link-hover" data-lang="nav_page-2"></a>
               </li>
               <li class="nav__item">
-                <a href="contacts.html" class="link-hover">Контакти</a>
+                <a href="contacts.html" class="link-hover" data-lang="nav_page-3"></a>
               </li>
             </ul>
 
@@ -644,6 +649,7 @@
   <script src="js/index.js"></script>
 
   <script src="js/swiper.js"></script>
+  <script src="js/lang.js"></script>
   <script src="js/fslightbox.js"></script>
 
   <script src="https://kit.fontawesome.com/fce9a50d02.js" crossorigin="anonymous"></script>
