--- a/index.html
+++ b/index.html
@@ -197,12 +197,9 @@
 
       <div class="header__content--container">
         <div class="header__content header__inner">
-          <h1 class="header__content-title">
-            Металообробка будь-якої складності на замовлення.
+          <h1 class="header__content-title" data-lang="header__content_page-1">
           </h1>
-          <p class="header__content-text">
-            Ми використовуємо передове обладнання та сучасні методи обробки металу. Це дозволяє нам досягати найвищої
-            якості, ефективності та точності у виробництві. Ваші проекти завжди будуть на крок попереду.
+          <p class="header__content-text" data-lang="header__content_page-2">
           </p>
         </div>
       </div>
@@ -212,25 +209,23 @@
   <main class="main">
     <div class="container">
       <section class="section preview">
-        <p class="section__title">
-          Виконуємо комплексну високоточну металообробку на верстатах з ЧПУ
+        <p class="section__title" data-lang="preview_page-1">
+
         </p>
         <p class="section__text">
-          Забезпечуємо повний спектр послуг з металообробки - від
-          <a class="preview__link" href="lazer.html">лазерної порізки,</a> та гнуття труб і
-          <a class="preview__link" href="sheet-bending.html">листового металу,</a> до
-          <a class="preview__link" href="dyeing.html">порошкового фарбування</a> та покриття пластизолем.
+          <span data-lang="preview_page-2"></span>
+          <a class="preview__link" href="lazer.html" data-lang="preview_page-3"></a> <span
+            data-lang="preview_page-4"></span>
+          <a class="preview__link" href="sheet-bending.html" data-lang="preview_page-5"></a> <span
+            data-lang="preview_page-6"></span>
+          <a class="preview__link" href="dyeing.html" data-lang="preview_page-7"></a> <span
+            data-lang="preview_page-8"></span>
         </p>
-        <!-- <p class="section__text">
-          Своїм клієнтам ми пропонуємо швидкий попередній прорахунок і
-          виконання замовлення, робимо все необхідне, щоб бути кращим
-          партнером у сфері виготовлення металевих запчастин і деталей.
-        </p> -->
       </section>
     </div>
 
     <section class="section services">
-      <h3 class="section__title services__title">Наші послуги</h3>
+      <h3 class="section__title services__title" data-lang="services_page-1"></h3>
       <div class="services__container">
         <article class="services__card" data-aos="fade-up">
           <figure class="services__content">
@@ -239,17 +234,15 @@
             </picture>
             <figcaption class="services__figcaption">
               <div class="services__name">
-                <a class="services__name-link" href="lazer.html">
-                  Лазерна порізка
+                <a class="services__name-link" href="lazer.html" data-lang="services_page-2">
                 </a>
               </div>
               <div class="services__hover-content">
-                <h4 class="services__hover-title">
-                  Лазер дозволяє виконувати як легкі, так і складні деталі,
-                  гарантуючи високу точність і відмінну швидкість роботи.
+                <h4 class="services__hover-title" data-lang="services_page-3">
+
                 </h4>
                 <a class="services__hover-text" href="lazer.html">
-                  <span class="services__hover--circle">Детальніше</span>
+                  <span class="services__hover--circle" data-lang="services_page-4"></span>
                 </a>
                 <a class="services__link" href="lazer.html"></a>
               </div>
@@ -263,18 +256,14 @@
             </picture>
             <figcaption class="services__figcaption">
               <div class="services__name">
-                <a class="services__name-link" href="sheet-bending.html">
-                  Гнуття деталей
-                </a>
+                <a class="services__name-link" href="sheet-bending.html" data-lang="services_page-5"></a>
               </div>
               <div class="services__hover-content">
-                <h4 class="services__hover-title">
-                  Гнуття металу - э однією з основних сфер застосування
-                  листового металу є виготовлення виробів із зігнутих листових
-                  деталей.
+                <h4 class="services__hover-title" data-lang="services_page-6">
+
                 </h4>
                 <a class="services__hover-text" href="sheet-bending.html">
-                  <span class="services__hover--circle">Детальніше</span>
+                  <span class="services__hover--circle" data-lang="services_page-7">Детальніше</span>
                 </a>
                 <a class="services__link" href="sheet-bending.html"></a>
               </div>
@@ -288,18 +277,16 @@
             </picture>
             <figcaption class="services__figcaption">
               <div class="services__name">
-                <a class="services__name-link" href="dyeing.html">
-                  Порошкове фарбування
+                <a class="services__name-link" href="dyeing.html" data-lang="services_page-9">
+
                 </a>
               </div>
               <div class="services__hover-content">
-                <h4 class="services__hover-title">
-                  Порошкове фарбування металевих виробів забезпечує високу
-                  якість покриття., зберігає відмінні фізико-хімічні та
-                  оздоблювальні характеристики.
+                <h4 class="services__hover-title" data-lang="services_page-8">
+
                 </h4>
                 <a class="services__hover-text" href="dyeing.html">
-                  <span class="services__hover--circle">Детальніше</span>
+                  <span class="services__hover--circle" data-lang="services_page-10"></span>
                 </a>
                 <a class="services__link" href="dyeing.html"></a>
               </div>
@@ -313,18 +300,16 @@
             </picture>
             <figcaption class="services__figcaption">
               <div class="services__name">
-                <a class="services__name-link" href="services.html">
-                  Усі послуги
+                <a class="services__name-link" href="services.html" data-lang="services_page-11">
+
                 </a>
               </div>
               <div class="services__hover-content">
-                <h4 class="services__hover-title">
-                  Виконуємо нестандартні та ексклюзивні замовлення на прохання
-                  клієнтів - великих промислових підприємств, комерційних
-                  організацій і виробничих фірм.
+                <h4 class="services__hover-title" data-lang="services_page-12">
+
                 </h4>
                 <a class="services__hover-text" href="services.html">
-                  <span class="services__hover--circle">Детальніше</span>
+                  <span class="services__hover--circle" data-lang="services_page-13"></span>
                 </a>
                 <a class="services__link" href="services.html"></a>
               </div>
@@ -335,12 +320,9 @@
     </section>
     <section class="section section--featured">
       <div class="container">
-        <h3 class="section__title">Наші принципи</h3>
-        <p class="section__text section--center-text">
-          В своїй роботі ми дотримуємось принципів, які дозволяють нам бути
-          впевненими в тому, що наші Клієнти отримують кращий продукт з
-          високим рівнем сервісу. Ми не просто виготовляємо металеві
-          конструкції – ми вирішуємо задачі наших Клієнтів!!!
+        <h3 class="section__title" data-lang="principles-page-1"></h3>
+        <p class="section__text section--center-text" data-lang="principles-page-2">
+
         </p>
         <div class="featured">
           <div class="featured__card" data-aos="zoom-in" data-aos-delay="50">
@@ -348,9 +330,8 @@
               <img class="featured__image" src="img/ok.svg" alt="Okey" width="32" height="32" />
             </div>
             <div class="featured__content">
-              <p class="featured__content-title">Якість</p>
-              <p class="featured__content-text">
-                Гарантуємо високу якість
+              <p class="featured__content-title" data-lang="principles-page-3"></p>
+              <p class="featured__content-text" data-lang="principles-page-4">
               </p>
             </div>
           </div>
@@ -359,10 +340,9 @@
               <img class="featured__image" src="img/service.svg" alt="service" width="32" height="32" />
             </div>
             <div class="featured__content">
-              <p class="featured__content-title">Сервіс</p>
-              <p class="featured__content-text">
-                Надаємо будь-яку допомогу при реалізації Вашого
-                проекту
+              <p class="featured__content-title" data-lang="principles-page-5"></p>
+              <p class="featured__content-text" data-lang="principles-page-6">
+
               </p>
             </div>
           </div>
@@ -371,9 +351,9 @@
               <img class="featured__image" src="img/price.svg" alt="Okey" width="32" height="32" />
             </div>
             <div class="featured__content">
-              <p class="featured__content-title">Ціна</p>
-              <p class="featured__content-text">
-                Конкурентні ціни. Знижки при великих об'ємах замовлень
+              <p class="featured__content-title" data-lang="principles-page-7"></p>
+              <p class="featured__content-text" data-lang="principles-page-8">
+
               </p>
             </div>
           </div>
@@ -382,10 +362,9 @@
               <img class="featured__image" src="img/handshake.svg" alt="Okey" width="55" height="40" />
             </div>
             <div class="featured__content">
-              <p class="featured__content-title">Надійність</p>
-              <p class="featured__content-text">
-                Завдяки багаторічному досвіду роботи, ми гарантуємо поставку
-                продукції в будь-якій ситуації
+              <p class="featured__content-title" data-lang="principles-page-9"></p>
+              <p class="featured__content-text" data-lang="principles-page-10">
+
               </p>
             </div>
           </div>
