--- a/about-us.html
+++ b/about-us.html
@@ -319,48 +319,61 @@
 						</a>
 					</li>
 				</ul>
-				<ul class="nav__social-list--desktop nav__social-list--svg">
-					<li class="nav__social-item">
-						<a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
-							<svg class="link-social--svg" width="25" height="25">
-								<use xlink:href="#facebook"></use>
-							</svg>
-						</a>
-					</li>
-					<li class="nav__social-item">
-						<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-							class="link-social link--hover">
-							<svg class="link-social--svg" width="25" height="25">
-								<use xlink:href="#location"></use>
-							</svg>
-						</a>
-					</li>
-				</ul>
+
+				<div class="nav__container">
+					<div class="header__lang">
+						<button class="header__btn" data-btn="ua">UA</button>
+						<button class="header__btn" data-btn="en">EN</button>
+						<button class="header__btn" data-btn="de">DE</button>
+					</div>
+					<ul class="nav__social-list--desktop nav__social-list--svg">
+						<li class="nav__social-item">
+							<a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+								<svg class="link-social--svg" width="25" height="25">
+									<use xlink:href="#facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="nav__social-item">
+							<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
+								class="link-social link--hover">
+								<svg class="link-social--svg" width="25" height="25">
+									<use xlink:href="#location"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+
+				</div>
 			</div>
 		</div>
 
 		<div class="header__container container">
-			<div class="header__lang">
-				<button class="header__btn" data-btn="ua">Ua</button>
-				<button class="header__btn" data-btn="en">En</button>
-				<button class="header__btn" data-btn="de">Dn</button>
-			</div>
 			<div class="menu">
-				<button class="burger-btn"><span></span></button>
-				<h1 class="menu__title">
-					<a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt="" /></a>
-				</h1>
+
+				<div class="menu__container">
+					<button class="burger-btn"><span></span></button>
+					<h1 class="menu__title">
+						<a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt="" /></a>
+					</h1>
+					<div class="header__lang nav__list-social">
+						<button class="header__btn" data-btn="ua">UA</button>
+						<button class="header__btn" data-btn="en">EN</button>
+						<button class="header__btn" data-btn="de">DE</button>
+					</div>
+				</div>
+
 				<nav class="nav">
 					<div class="nav__inner">
 						<ul class="nav__list">
 							<li class="nav__item">
-								<a href="services.html" class="link-hover" data-lang="index_nav-page-1"> Металообробка </a>
+								<a href="services.html" class="link-hover" data-lang="nav_page-1"></a>
 							</li>
 							<li class="nav__item">
-								<a class="link--active">Про нас</a>
+								<a href="about-us.html" class="link-hover" data-lang="nav_page-2"></a>
 							</li>
 							<li class="nav__item">
-								<a href="contacts.html" class="link-hover">Контакти</a>
+								<a href="contacts.html" class="link-hover" data-lang="nav_page-3"></a>
 							</li>
 						</ul>
 
@@ -759,6 +772,7 @@
 	<script src="js/swiper.js"></script>
 	<script src="js/fslightbox.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/lang.js"></script>
 </body>
 
 </html>
