--- a/dyeing.html
+++ b/dyeing.html
@@ -316,43 +316,60 @@
 						</a>
 					</li>
 				</ul>
-				<ul class="nav__social-list--desktop nav__social-list--svg">
-					<li class="nav__social-item">
-						<a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
-							<svg class="link-social--svg" width="25" height="25">
-								<use xlink:href="#facebook"></use>
-							</svg>
-						</a>
-					</li>
-					<li class="nav__social-item">
-						<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-							class="link-social link--hover">
-							<svg class="link-social--svg" width="25" height="25">
-								<use xlink:href="#location"></use>
-							</svg>
-						</a>
-					</li>
-				</ul>
+				<div class="nav__container">
+					<div class="header__lang">
+						<button class="header__btn" data-btn="ua">UA</button>
+						<button class="header__btn" data-btn="en">EN</button>
+						<button class="header__btn" data-btn="de">DE</button>
+					</div>
+					<ul class="nav__social-list--desktop nav__social-list--svg">
+						<li class="nav__social-item">
+							<a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+								<svg class="link-social--svg" width="25" height="25">
+									<use xlink:href="#facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="nav__social-item">
+							<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
+								class="link-social link--hover">
+								<svg class="link-social--svg" width="25" height="25">
+									<use xlink:href="#location"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+
+				</div>
 			</div>
 		</div>
 
 		<div class="header__container container">
 			<div class="menu">
-				<button class="burger-btn"><span></span></button>
-				<h1 class="menu__title">
-					<a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt="" /></a>
-				</h1>
+
+				<div class="menu__container">
+					<button class="burger-btn"><span></span></button>
+					<h1 class="menu__title">
+						<a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt="" /></a>
+					</h1>
+					<div class="header__lang nav__list-social">
+						<button class="header__btn" data-btn="ua">UA</button>
+						<button class="header__btn" data-btn="en">EN</button>
+						<button class="header__btn" data-btn="de">DE</button>
+					</div>
+				</div>
+
 				<nav class="nav">
 					<div class="nav__inner">
 						<ul class="nav__list">
 							<li class="nav__item">
-								<a href="services.html" class="link--active">Металообробка</a>
+								<a href="services.html" class="link-hover" data-lang="nav_page-1"></a>
 							</li>
 							<li class="nav__item">
-								<a href="about-us.html" class="link-hover">Про нас</a>
+								<a href="about-us.html" class="link-hover" data-lang="nav_page-2"></a>
 							</li>
 							<li class="nav__item">
-								<a href="contacts.html" class="link-hover">Контакти</a>
+								<a href="contacts.html" class="link-hover" data-lang="nav_page-3"></a>
 							</li>
 						</ul>
 
@@ -394,6 +411,7 @@
 					</div>
 				</nav>
 			</div>
+
 
 			<div class="header__content--container">
 				<div class="header__content header__inner">
@@ -614,24 +632,24 @@
 			<div class="calculation__inner">
 				<div class="calculation__wrapper container">
 					<div class="calculation__content">
-						<h3 class="section__title calculation__title">
-							Замовити прорахунок проекту
-						</h3>
+						<h3 class="section__title calculation__title" data-lang="calculation_page-1"></h3>
 					</div>
 					<div class="calculation__form-container">
-
 						<form class="calculation__form" action="send_mail.php" name="form" method="POST">
-							<input class="input-name" type="text" placeholder="Ваше ім'я" name="name" id="name" />
-							<input class="input-number" type="text" placeholder="Ваш E-mail" name="email" id="email"
-								data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$" />
+							<input class="input-name" type="text" placeholder="Name" name="name" id="name"
+								data-lang="calculation_page-4" />
+							<input class="input-number" type="text" placeholder="E-mail" name="email" id="email"
+								data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$" data-lang="calculation_page-5" />
 
 
 							<input class="input-number" type="text" placeholder="099 123 23 12" name="phone" id="phone" />
-							<textarea class="form-textarea" cols="40" rows="6" placeholder="Коментар до замовлення"></textarea>
-							<label class="calculation__label" for="file">Завантажити файл:</label>
+							<textarea class="form-textarea" cols="40" rows="6" placeholder="Comment"
+								data-lang="calculation_page-6"></textarea>
+							<label class="calculation__label" for="file" data-lang="calculation_page-2"></label>
 							<input class="calculation__input-file" type="file" id="file" />
 
-							<input class="button button-form" type="submit" id="btn_send" value="Надіслати" />
+							<button class="button button-form" type="submit" id="btn_send" data-lang="calculation_page-3"
+								value="Надіслати">
 							</button>
 						</form>
 					</div>
@@ -644,62 +662,64 @@
 			<div class="container">
 				<div class="info">
 					<div class="info__block info__menu">
-						<h5 class="info__title">Меню</h5>
+						<h5 class="info__title" data-lang="footer_page-1"></h5>
 						<ul>
 							<li class="info__item">
-								<a class="info__link" href="services.html">Послуги</a>
+								<a class="info__link" href="services.html" data-lang="footer_page-2"></a>
 							</li>
 							<li class="info__item">
-								<a class="info__link" href="about-us.html">Про нас</a>
+								<a class="info__link" href="about-us.html" data-lang="footer_page-3"></a>
 							</li>
 							<li class="info__item">
-								<a class="info__link" href="contacts.html">Контакти</a>
+								<a class="info__link" href="contacts.html" data-lang="footer_page-4"></a>
 							</li>
+
 						</ul>
 					</div>
 					<div class="info__block info__schedule">
-						<h5 class="info__title">Послуги</h5>
+						<h5 class="info__title" data-lang="footer_page-5"></h5>
 						<ul class="info__list">
 							<li class="info__item">
-								<a href="lazer.html" class="info__link">Лазерна порізка</a>
+								<a href="lazer.html" class="info__link" data-lang="footer_page-6"></a>
 							</li>
 							<li class="info__item">
-								<a href="sheet-bending.html" class="info__link">Гнуття деталей</a>
+								<a href="sheet-bending.html" class="info__link" data-lang="footer_page-7"></a>
 							</li>
 							<li class="info__item">
-								<a href="dyeing.html" class="info__link">Порошкове фарбування</a>
+								<a href="dyeing.html" class="info__link" data-lang="footer_page-8"></a>
 							</li>
 							<li class="info__item">
-								<a href="welding.html" class="info__link">Зварювальні роботи</a>
+								<a href="welding.html" class="info__link" data-lang="footer_page-9"></a>
 							</li>
 							<li class="info__item">
-								<a href="locksmith.html" class="info__link">Слюсарні роботи</a>
+								<a href="locksmith.html" class="info__link" data-lang="footer_page-10"></a>
 							</li>
 						</ul>
 					</div>
 					<div class="info__block info__address">
-						<h5 class="info__title">Адреса</h5>
+						<h5 class="info__title" data-lang="footer_page-11">Адреса</h5>
 						<ul class="info__list">
 							<li class="info__item">
 								<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-									class="link-social link--hover">
-									<svg class="link-social--svg" width="30" height="30">
-										<use xlink:href="#location"></use>
-									</svg>
-									45200 м. Ківерці, вул.Грушевського 26
+									class="link-social link--hover" data-lang="footer_page-12">
+
 								</a>
+								<svg class="link-social--svg" width="30" height="30">
+									<use xlink:href="#location"></use>
+								</svg>
 							</li>
 							<li class="info__item info__item--color">
-								<svg class="clock-svg" width="25" height="25">
+								<a href="" class="link-social " id="disabledLink" data-lang="footer_page-13"></a>
+								<svg class="clock-svg link-social--svg" width="25" height="25">
 									<use xlink:href="#clock"></use>
 								</svg>
-								Пн - Пт 8:00 - 17:00
 							</li>
+
 						</ul>
 					</div>
 
 					<div class="info__block info__contact">
-						<h5 class="info__title">Наші контакти</h5>
+						<h5 class="info__title" data-lang="footer_page-14"></h5>
 						<ul class="info__list">
 							<li class="info__item">
 								<a class="link-social link--hover" href="tel:+380687945051">
@@ -742,6 +762,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script src="js/index.js"></script>
+	<script src="js/lang.js"></script>
 	<script src="js/swiper.js"></script>
 	<script src="js/fslightbox.js"></script>
 	<script src="js/app.js"></script>
