--- a/index.html
+++ b/index.html
@@ -374,8 +374,7 @@
 
     <section class="section ware">
       <div class="container">
-        <h3 class="section__title">
-          Каталог продукції
+        <h3 class="section__title" data-lang="wara_page-1">
         </h3>
 
         <div class="ware__box">
@@ -386,7 +385,7 @@
               </picture>
               <figcaption class="ware__figcaption">
                 <div class="ware__name">
-                  <a class="ware__name-link">Елементи меблів</a>
+                  <a class="ware__name-link" data-lang="wara_page-2"></a>
                 </div>
               </figcaption>
             </figure>
@@ -399,7 +398,7 @@
               </picture>
               <figcaption class="ware__figcaption">
                 <div class="ware__name">
-                  <a class="ware__name-link">СГ обладнання</a>
+                  <a class="ware__name-link" data-lang="wara_page-3"></a>
                 </div>
               </figcaption>
             </figure>
@@ -413,7 +412,7 @@
               </picture>
               <figcaption class="ware__figcaption">
                 <div class="ware__name">
-                  <a class="ware__name-link"> Декоративні елементи </a>
+                  <a class="ware__name-link" data-lang="wara_page-4"></a>
                 </div>
               </figcaption>
             </figure>
@@ -425,7 +424,7 @@
               </picture>
               <figcaption class="ware__figcaption">
                 <div class="ware__name">
-                  <a class="ware__name-link"> Індивідуальні проекти </a>
+                  <a class="ware__name-link" data-lang="wara_page-5"></a>
                 </div>
               </figcaption>
             </figure>
@@ -437,13 +436,8 @@
     <section class="section partners">
       <div class="container">
         <div>
-          <h3 class="section__title">Наші партнери</h3>
-
-          <p class="section__text section--center-text">
-            Багаторічний досвід «Армаксу», професійний підхід до роботи,
-            сучасне і якісне обладнання – ось за що нас обирають найкращі
-            компанії!
-          </p>
+          <h3 class="section__title" data-lang="partners_page-1"></h3>
+          <p class="section__text section--center-text" data-lang="partners_page-2"></p>
         </div>
         <div class="partners__slider">
           <div class="swiper">
@@ -480,55 +474,24 @@
       <div class="calculation__inner">
         <div class="calculation__wrapper container">
           <div class="calculation__content">
-            <h3 class="section__title calculation__title">
-              Замовити прорахунок проекту
-            </h3>
-            <!-- <ul class="calculation__list">
-              <li class="calculation__item">
-                <p class="calculation__text">
-                  Для швидкого прорахунку вартості замовлення, завантажте
-                  креслення готових деталей та їх плоскої розгортки у форматі
-                  DWG або DXF за допомогою форми або надішліть їх на пошту
-                  lazer.armax@gmail.com
-                </p>
-              </li>
-              <li class="calculation__item">
-                <p class="calculation__text">
-                  Разом із кресленнями вкажіть номер деталей на Вашому
-                  виробництві, тип матеріалу, його марку, товщину матеріалу, і
-                  кількість деталей кожного типу.
-                </p>
-              </li>
-              <li class="calculation__item">
-                <p class="calculation__text">
-                  У назві файлу не використовуйте спеціальні символи (лапки,
-                  дужки, тире), та символи кирилицею.
-                </p>
-              </li>
-              <li class="calculation__item">
-                <p class="calculation__text">
-                  Креслення повинні бути виконані прямими, дугами і
-                  полілініями. Не допускається використання сплайнів. Вкажіть
-                  Ваші контакти (електронна пошта, телефон), щоб ми могли з
-                  вами зв'язатися.
-                </p>
-              </li>
-            </ul> -->
+            <h3 class="section__title calculation__title" data-lang="calculation_page-1"></h3>
           </div>
           <div class="calculation__form-container">
-
             <form class="calculation__form" action="send_mail.php" name="form" method="POST">
-              <input class="input-name" type="text" placeholder="Ваше ім'я" name="name" id="name" />
-              <input class="input-number" type="text" placeholder="Ваш E-mail" name="email" id="email"
-                data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$" />
+              <input class="input-name" type="text" placeholder="Name" name="name" id="name"
+                data-lang="calculation_page-4" />
+              <input class="input-number" type="text" placeholder="E-mail" name="email" id="email"
+                data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$" data-lang="calculation_page-5" />
 
 
               <input class="input-number" type="text" placeholder="099 123 23 12" name="phone" id="phone" />
-              <textarea class="form-textarea" cols="40" rows="6" placeholder="Коментар до замовлення"></textarea>
-              <label class="calculation__label" for="file">Завантажити файл:</label>
+              <textarea class="form-textarea" cols="40" rows="6" placeholder="Comment"
+                data-lang="calculation_page-6"></textarea>
+              <label class="calculation__label" for="file" data-lang="calculation_page-2"></label>
               <input class="calculation__input-file" type="file" id="file" />
 
-              <input class="button button-form" type="submit" id="btn_send" value="Надіслати" />
+              <button class="button button-form" type="submit" id="btn_send" data-lang="calculation_page-3"
+                value="Надіслати">
               </button>
             </form>
           </div>
@@ -541,63 +504,64 @@
       <div class="container">
         <div class="info">
           <div class="info__block info__menu">
-            <h5 class="info__title">Меню</h5>
+            <h5 class="info__title" data-lang="footer_page-1"></h5>
             <ul>
               <li class="info__item">
-                <a class="info__link" href="services.html">Послуги</a>
+                <a class="info__link" href="services.html" data-lang="footer_page-2"></a>
               </li>
               <li class="info__item">
-                <a class="info__link" href="about-us.html">Про нас</a>
+                <a class="info__link" href="about-us.html" data-lang="footer_page-3"></a>
               </li>
               <li class="info__item">
-                <a class="info__link" href="contacts.html">Контакти</a>
+                <a class="info__link" href="contacts.html" data-lang="footer_page-4"></a>
               </li>
 
             </ul>
           </div>
           <div class="info__block info__schedule">
-            <h5 class="info__title">Послуги</h5>
+            <h5 class="info__title" data-lang="footer_page-5"></h5>
             <ul class="info__list">
               <li class="info__item">
-                <a href="lazer.html" class="info__link">Лазерна порізка</a>
+                <a href="lazer.html" class="info__link" data-lang="footer_page-6"></a>
               </li>
               <li class="info__item">
-                <a href="sheet-bending.html" class="info__link">Гнуття деталей</a>
+                <a href="sheet-bending.html" class="info__link" data-lang="footer_page-7"></a>
               </li>
               <li class="info__item">
-                <a href="dyeing.html" class="info__link">Порошкове фарбування</a>
+                <a href="dyeing.html" class="info__link" data-lang="footer_page-8"></a>
               </li>
               <li class="info__item">
-                <a href="welding.html" class="info__link">Зварювальні роботи</a>
+                <a href="welding.html" class="info__link" data-lang="footer_page-9"></a>
               </li>
               <li class="info__item">
-                <a href="locksmith.html" class="info__link">Слюсарні роботи</a>
+                <a href="locksmith.html" class="info__link" data-lang="footer_page-10"></a>
               </li>
             </ul>
           </div>
           <div class="info__block info__address">
-            <h5 class="info__title">Адреса</h5>
+            <h5 class="info__title" data-lang="footer_page-11">Адреса</h5>
             <ul class="info__list">
               <li class="info__item">
                 <a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-                  class="link-social link--hover">
-                  <svg class="link-social--svg" width="30" height="30">
-                    <use xlink:href="#location"></use>
-                  </svg>
-                  45200 м. Ківерці, вул.Грушевського 26
+                  class="link-social link--hover" data-lang="footer_page-12">
+
                 </a>
+                <svg class="link-social--svg" width="30" height="30">
+                  <use xlink:href="#location"></use>
+                </svg>
               </li>
               <li class="info__item info__item--color">
-                <svg class="clock-svg" width="25" height="25">
+                <a href="" class="link-social " id="disabledLink" data-lang="footer_page-13"></a>
+                <svg class="clock-svg link-social--svg" width="25" height="25">
                   <use xlink:href="#clock"></use>
                 </svg>
-                Пн - Пт 8:00 - 17:00
               </li>
+
             </ul>
           </div>
 
           <div class="info__block info__contact">
-            <h5 class="info__title">Наші контакти</h5>
+            <h5 class="info__title" data-lang="footer_page-14"></h5>
             <ul class="info__list">
               <li class="info__item">
                 <a class="link-social link--hover" href="tel:+380687945051">
